# 2024

./: CMakeLists.txt  build.sh  d
Armando Condori Quispe/TP 3 Ejercicio 5/: TP 3 Ejercicio 5..cbp  main.cpp
Facundo Palacios/Parciales repaso/: Parcial2_2017.rar  Parcial2_2023.rar
Jorge Agustín Turina/2p2019/: 2p2019.cbp  2p2019.depend  2p2019.layout  CCirculo.cpp  CCirculo.h  CColor.cpp  CColor.h  CFigura.cpp  CFigura.h  CRectangulo.cpp  CRectangulo.h  ManejadorFiguras.cpp  ManejadorFiguras.h  main.cpp  salida.txt
Jorge Agustín Turina/2p2023/: 2p2023.cbp  2p2023.depend  2p2023.layout  ManejadorServicios.cpp  ManejadorServicios.h  main.cpp
Jorge Agustín Turina/CMatriz/: CColor.cpp  CColor.h  CMatriz.cbp  CMatriz.cpp  CMatriz.depend  CMatriz.h  CMatriz.layout  CPantalla .cpp  CPantalla .h  fdsdfd.cpp  fdsdfd.h  main.cpp  manejo_archivos.cpp  manejo_archivos2.cpp
Jorge Agustín Turina/Parcial2_2017/: CMaritimo.cpp  CMaritimo.h  CTransporte.cpp  CTransporte.h  Parcial2_2017.cbp  Parcial2_2017.depend  Parcial2_2017.layout  main.cpp  persona.h
Jorge Agustín Turina/borrar/: borrar.cbp  borrar.depend
Jorge Agustín Turina/circulo/: circulo.cbp  circulo.depend  main.cpp
Jorge Agustín Turina/color/: CColor.cpp  CColor.h  ManejadorArchivos.cpp  ManejadorArchivos.h  archivo.txt  binarioo.rar  color.cbp  color.depend  color.layout  main.cpp
Jorge Agustín Turina/fec/: Fecha.h  fec.cbp  fec.depend  fec.layout  main.cpp
Jorge Agustín Turina/generarbinario/: archivo.txt  generarbinario.cbp  main.cpp
Jorge Agustín Turina/test/: main.cpp  test.depend  test.layout
Jorge Agustín Turina/test2/: CMatriz  exit.txt  main.cpp  persona.cpp  persona.h  test2.depend  test2.layout
Jorge Agustín Turina/ver_vtables/: main.cpp  ver_vtables.cbp  ver_vtables.depend  ver_vtables.layout
Jorge Agustín Turina/virtual/: main.cpp  virtual.cbp  virtual.depend  virtual.layout
Juan Jose Diaz/ArchivosConceptos/: CMakeLists.txt  main.cpp
Juan Jose Diaz/ArchivosConceptos/Archivo/: Archivo.cpp  Archivo.h
Juan Jose Diaz/ArchivosConceptos/Archivo/ArchivoExceptions/: ArchivoAperturaException.h  ArchivoException.h  ArchivoLecturaException.h
Juan Jose Diaz/CalculadorImpositivo/: CMakeLists.txt  main.cpp
Juan Jose Diaz/CalculadorImpositivo/CalculadorImpositivo/: CalculadorImpositivo.cpp  CalculadorImpositivo.h
Juan Jose Diaz/CalculadorImpositivo/CalculadorImpositivo/Contribuyente/: Contribuyente.cpp  Contribuyente.h
Juan Jose Diaz/CalculadorImpositivo/CalculadorImpositivo/ContribuyenteFactory/: ContribuyenteFactory.cpp  ContribuyenteFactory.h
Juan Jose Diaz/CalculadorImpositivo/CalculadorImpositivo/Factura/: Factura.cpp  Factura.h
Juan Jose Diaz/CalculadorImpositivo/CalculadorImpositivo/ReciboDePago/: ReciboDePago.cpp  ReciboDePago.h
Juan Jose Diaz/GestorRegistros/: CMakeLists.txt  main.cpp
Juan Jose Diaz/InvertirPalabra/: CMakeLists.txt  main.cpp
Luca Emiliano Uriarte/tests/: crtp_2.cpp
Lucas Malinarich Sliba/STL/: ejemplos chat.txt
Lucas Malinarich Sliba/cRacional/: cRacional.cbp  claseRacional.h  main.cpp  metodosRacional.cpp
Lucas Malinarich Sliba/calculadorImpositivo/: calculadorImpositivo.cbp  claseCalculador.h  claseContribuyente.h  claseFactura.h  claseRecibo.h  main.cpp  metodosCalculador.cpp  metodosContribuyente.cpp  metodosFactura.cpp  metodosRecibo.cpp
Lucas Malinarich Sliba/claseBanco/: Esquema Banco.drawio  claseBanco.cbp  claseBanco.h  claseCuenta.h  main.cpp  metodosCAhorro.cpp  metodosCCorriente.cpp  metodosCUniversitaria.cpp  metodosCuenta.cpp
Lucas Malinarich Sliba/claseBecario/: claseBecario.cbp  claseBecario.h  claseEstudiante.h  claseFecha.h  main.cpp  metodosBecario.cpp  metodosEmpleado.cpp  metodosEstudiante.cpp  metodosFecha.cpp  metodosPersona.cpp
Lucas Malinarich Sliba/claseComplejos/: claseComplejos.cbp  claseComplejos.h  main.cpp  metodosComplejos.cpp  metodosPolar.cpp
Lucas Malinarich Sliba/claseEmpresa/: claseEmpleado.h  claseEmpresa.cbp  claseEmpresa.h  claseFecha.h  (+7 more)
Manuel Perez Cabrera/: clase poliimorfismoç.txt  readme.txt  test_2.txt
Manuel Perez Cabrera/Software_laser/: CMakeLists.txt  clientes.csv  dialogagregarproducto.cpp  dialogagregarproducto.h  dialogagregarproducto.ui  dialogeliminarproducto.cpp  dialogeliminarproducto.h  dialogeliminarproducto.ui  gestionstock.cpp  gestionstock.h  logindialog.cpp  logindialog.h  logindialog.ui  logins.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pedidos.csv  producto.cpp  producto.h  registerdialog.cpp  registerdialog.h  registerdialog.ui  stock.csv
Manuel Perez Cabrera/Software_laser/clienteClientes/: cliente.cpp  cliente.h  dialogagregarcliente.cpp  dialogagregarcliente.h  dialogagregarcliente.ui  dialogclientes.cpp  dialogclientes.h  dialogclientes.ui  dialogeliminarcliente.cpp  dialogeliminarcliente.h  dialogeliminarcliente.ui  gestorclientes.cpp  gestorclientes.h
Manuel Perez Cabrera/Software_laser/pedidosClientes/: dialogpedido.cpp  dialogpedido.h  dialogpedido.ui  gestorpedidos.cpp  gestorpedidos.h  pedidoespecial.cpp  pedidoespecial.h  pedidonormal.cpp  pedidonormal.h  pedidos.cpp  pedidos.h
Matias Valentin Estrada/: Diagrama de clases Calculador Impositivo.drawio
pablo/: algo.txt
(+762 files in other folders)
